# MontyHallProblem

./: CMakeLists.txt  README.md
include/: secret.h
src/: main.cpp  secret.cpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
